# PNG-decoder

./: CMakeLists.txt  build.cmake  libpng_wrappers.h  png-specification-conspect.md  readme.md  test.cpp  test_commons.hpp
src/: errors.h  utils.h
src/crc_calculator/: CMakeLists.txt  crc_calculator.cpp  crc_calculator.h
src/inflater/: CMakeLists.txt  inflater.cpp  inflater.h
src/png_decoder/: CMakeLists.txt  bit_reader.cpp  bit_reader.h  chunk.cpp  chunk.h  defilter.cpp  defilter.h  pallete.cpp  pallete.h  pixel_reader.cpp  pixel_reader.h  png_decoder.cpp  png_decoder.h
